tests/ui/binop/binop-bitxor-str.rs
fn main() { let x = "a".to_string() ^ "b".to_string(); }
<<<<<<< HEAD

// ferrocene-annotations: fls_abp6tjbz8tpn
// Bit Expressions
//
// ferrocene-annotations: fls_izdv9i4spokw
// Operator Expressions
=======
//~^ ERROR no implementation for `String ^ String`
>>>>>>> pull-upstream-temp--do-not-use-for-real-code
